syntax="proto3";
package linkRepository;
option go_package = "./;linkRepository";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";


message Link {
  bytes uuid = 1;
  string url = 2;
  google.protobuf.Timestamp retrieved_at = 3;
}


message Edge {
  bytes uuid = 1;
  bytes source_uuid = 2;
  bytes destination_uuid = 3;
  google.protobuf.Timestamp updated_at = 4;
}


message RemoveOldEdgesQuery {
  bytes from_uuid = 1;
  google.protobuf.Timestamp updated_before = 2;
}

service LinkRepository {

  rpc SaveLink(Link) returns (Link);
  rpc SaveEdge(Edge) returns (Edge);
  rpc RemoveOldEdges(RemoveOldEdgesQuery) returns (google.protobuf.Empty);
}
